updated imprint on cover

--- a/media/deckblätter/vorlage/deckblatt.tex
+++ b/media/deckblätter/vorlage/deckblatt.tex
@@ -50,11 +50,10 @@ _pages_ Seiten
 
 \vfill
 \large
-herausgegeben von der \\
-Fachschaft Mathematik/Physik/Informatik \\
-Raum MI 00.06.039 \\
+herausgegeben von: \\
+Studienförderung der Fachschaft MPIC e. V. \\
 Boltzmannstraße 3 \\
-85748 Garching
+85748 Garching bei München
 
 \vfill
 \,\hfill\codetext{_ean_}\hfill\,
